Fixes and Improvements. Added Space support. Added more commands.